--- a/Software/bldc_sensorless/main/CMakeLists.txt
+++ b/Software/bldc_sensorless/main/CMakeLists.txt
@@ -1,2 +1,12 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+set(HAL_FILES "hal/hal_bldc.c")
+set(APP_FILES "app/app_variable.c")
+
+idf_component_register(
+  SRCS
+  "main.c"
+  ${HAL_FILES}
+  ${APP_FILES}
+  INCLUDE_DIRS
+  "."
+  "hal/include"
+  "app/include")
