--- a/Software/bldc_sensorless/main/CMakeLists.txt
+++ b/Software/bldc_sensorless/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(HAL_FILES "hal/hal_bldc.c")
-set(APP_FILES "app/app_variable.c")
+set(APP_FILES "app/app_variable.c" "app/app_pid.c")
 
 idf_component_register(
   SRCS
