add bldc lock protection.

--- a/Software/bldc_sensorless/main/CMakeLists.txt
+++ b/Software/bldc_sensorless/main/CMakeLists.txt
@@ -1,5 +1,6 @@
-set(HAL_FILES "hal/hal_bldc.c")
-set(APP_FILES "app/app_variable.c" "app/app_pid.c")
+set(HAL_FILES "hal/hal_bldc.c" "hal/hal_btn.c")
+set(APP_FILES "app/app_variable.c" "app/app_pid.c" "app/app_wind.c")
+set(INC_FILES "hal/include" "app/include")
 
 idf_component_register(
   SRCS
@@ -8,5 +9,4 @@ idf_component_register(
   ${APP_FILES}
   INCLUDE_DIRS
   "."
-  "hal/include"
-  "app/include")
+  ${INC_FILES})
