--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "app_rmaker.h": "c",
         "app_wifi.h": "c",
         "esp_rmaker_common_events.h": "c",
-        "random": "c"
+        "random": "c",
+        "bitset": "c",
+        "time.h": "c"
     }
 }
