--- a/Software/bldc_sensorless/CMakeLists.txt
+++ b/Software/bldc_sensorless/CMakeLists.txt
@@ -7,4 +7,4 @@ cmake_minimum_required(VERSION 3.5)
 set(EXTRA_COMPONENT_DIRS common)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(template-app)
+project(bldc-sensorless)
